2005-09-30  Bill Wohler  <wohler@newt.com>

	Moved MH-E image files from toolbar and mail directories into
	etc/images.

	* mail/reply2.*: Moved to etc/images/mail/reply*.

	* toolbar/execute.*, toolbar/highlight.*, toolbar/mh-logo.xpm:
	* toolbar/page-down.*, toolbar/show.*, toolbar/widen.*: Moved to
	etc/images.

	* toolbar/alias.*, toolbar/refile.*, toolbar/repack.*:
	* toolbar/reply*: Moved to etc/images/mail.

	* toolbar/rescan.*: Moved and renamed to etc/images/refresh.*.

2005-09-30  Eric M. Ludlam <zappo@gnu.org>

	* speedbar.el: New version 1.0pre3.

	* dframe.el, ezimage.el, sb-image.el: New files.

	* sb-*.xpm: Files removed.  New image files installed into
	etc/images/ezimage.

2005-09-30  Kenichi Handa  <handa@m17n.org>

	* ps-mule.el (ps-mule-show-warning): If a character is in
	ps-print-translation-table, don't treat it as non-printable.

2005-09-30  David Ponce  <david@dponce.com>

	* tree-widget.el (tree-widget-themes-load-path): New variable.
	(tree-widget-themes-directory): Doc fix.
	(tree-widget-image-formats) [Emacs]: Doc fix.
	(tree-widget--locate-sub-directory): New function.
	(tree-widget-themes-directory): Use it.

	* recentf.el (recentf-filename-handlers): Rename from
	`recentf-filename-handler'.  Allow a list of functions.
	(recentf-menu-items-for-commands): Fix :help strings.
	(recentf-apply-filename-handlers): New function.
	(recentf-expand-file-name): Use it.
	(recentf-cleanup): Remove duplicates too.

2005-09-29  Juri Linkov  <juri@jurta.org>

	* faces.el: Rearrange face definitions to be in the same order as
	their face descriptions in "(emacs)Standard Faces".

	* isearch.el (isearch, lazy-highlight): Add group `basic-faces'.

	* tooltip.el (tooltip): Add group `basic-faces'.

	* buff-menu.el (Buffer-menu-buffer): Remove group
	`font-lock-highlighting-faces'.

	* progmodes/compile.el (compilation-error, compilation-warning)
	(compilation-info, compilation-line-number, compilation-column-number):